--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body{
     width: 100%;
     height: 100%;
-    background-color: lightgrey;
+    background-color: rgb(220, 222, 236);
     font-family: 'Anton', sans-serif;
 }
 
@@ -62,15 +62,24 @@ body{
     }
 }
 
+
+#produtos img{
+    width: 50%;
+}
+
 #carouselExampleControls{
-    width: 80%;
+    width: 55%;
     margin: 0 auto;
     display: table;
 }
 
 #carouselExampleControls img{
-    width: 60%;
-    height: 600px;
+    width: 50%;
+    height: 450px;
+}
+
+#botaoTopo button{
+    align-items: center;
 }
 
 @media  screen and (max-width: 998px) {
